# graphics

./: CMakeLists.txt
src/geometry/: halfedge.h  halfedge_mesh.cpp  loop.txt  meshedit.cpp
src/render/: graphics_interface.h  rasterizer.cpp  rasterizer_renderer.cpp  rasterizer_renderer.h  render_engine.cpp  shader.cpp
src/scene/: camera.cpp  object.cpp  scene.cpp
src/simulation/: solver.cpp
src/ui/: toolbar.cpp
src/utils/: CMakeLists.txt
